2001-05-13  Chris Abbey  <cabbey@bresnanlink.net>

	Released Jikes 1.14, Happy Mother's Day.

2001-05-13  Chris Abbey  <cabbey@bresnanlink.net>

	* jikes.spec: added %doc for documentation files,
	and changed jikes.1 to jikes.1.gz because the rpm
	build process automatically compresses man pages,
	but doesn't reflect this in the %files section.

2001-05-11  Chris Abbey  <cabbey@bresnanlink.net>

	* src/stream.cpp (Stream::DecodeNextCharacter): fixed
	core fault in parser because we cast a char to a wchar_t
	without preventing sign expansion.

2001-05-11  Chris Abbey  <cabbey@bresnanlink.net>

	* jikes.spec: takes Dave's name out so people stop claiming
	to be him. Also update the version to 1.14

2001-05-10  Chris Abbey  <cabbey@bresnanlink.net>

	* src/option.cpp (Option::Option): make sure classpath,
	bootclasspath, sourcepath and extdirs are not null before
	being handed over to cygwin to convert the paths. Also
	flagged some potential memory leaks.

2001-05-09  Chris Abbey  <cabbey@bresnanlink.net>

	* acinclude.m4:
	* src/config.h.in:
	* src/m4/ac_check_iconv.m4:
	* src/m4/ac_find_encodign.m4:
	* src/m4/ac_try_encoding.m4: add support to probe for
	the correct combo of target encoding and byteswapping
	for iconv on this platform.
	* src/stream.cpp: make use of probed values instead
	of hardcoded. Correct byteswapping to handle all four
	bytes when sizeof(wchar_t) is 4, bypass swapping if
	possible.
	* aclocal.m4:
	* configure: regenerated

2001-05-07  Pascal Davoust  <davoustp@yahoo.com>

	* long.cpp (LongInt::ConstantCleanup):
	fix MSVC build break because the compiler
	doesn't allow automated conversion of a const X*
	to a void*. Explicit cast (without const modifier)
	used.
	* definite.cpp (DefiniteSwitchStatement):
	fix MSVC build break because of duplicate
	variables in 'for' loops.

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h:
	* src/bytecode.cpp (EmitCheckForNull): Add a method
	which emits a check for null-qualified expressions,